--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -264,6 +264,8 @@
 ; PTImode is GPR only)
 (define_mode_iterator TI2 [TI PTI])
 
+(define_mode_iterator P2 [(SI "TARGET_32BIT || TARGET_SLOW_MFOCR") (DI "TARGET_64BIT")])
+
 ; Any hardware-supported floating-point mode
 (define_mode_iterator FP [
   (SF "TARGET_HARD_FLOAT 
@@ -2132,9 +2134,9 @@
 
 (define_insn ""
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,?y")
-	(compare:CC (neg:P (match_operand:P 1 "gpc_reg_operand" "r,r"))
+	(compare:CC (neg:P2 (match_operand:P2 1 "gpc_reg_operand" "r,r"))
 		    (const_int 0)))
-   (clobber (match_scratch:P 2 "=r,r"))]
+   (clobber (match_scratch:P2 2 "=r,r"))]
   ""
   "@
    neg. %2,%1
@@ -2144,12 +2146,12 @@
 
 (define_split
   [(set (match_operand:CC 0 "cc_reg_not_cr0_operand" "")
-	(compare:CC (neg:P (match_operand:P 1 "gpc_reg_operand" ""))
+	(compare:CC (neg:P2 (match_operand:P2 1 "gpc_reg_operand" ""))
 		    (const_int 0)))
-   (clobber (match_scratch:P 2 ""))]
+   (clobber (match_scratch:P2 2 ""))]
   "reload_completed"
   [(set (match_dup 2)
-	(neg:P (match_dup 1)))
+	(neg:P2 (match_dup 1)))
    (set (match_dup 0)
 	(compare:CC (match_dup 2)
 		    (const_int 0)))]
@@ -2157,10 +2159,10 @@
 
 (define_insn ""
   [(set (match_operand:CC 2 "cc_reg_operand" "=x,?y")
-	(compare:CC (neg:P (match_operand:P 1 "gpc_reg_operand" "r,r"))
+	(compare:CC (neg:P2 (match_operand:P2 1 "gpc_reg_operand" "r,r"))
 		    (const_int 0)))
-   (set (match_operand:P 0 "gpc_reg_operand" "=r,r")
-	(neg:P (match_dup 1)))]
+   (set (match_operand:P2 0 "gpc_reg_operand" "=r,r")
+	(neg:P2 (match_dup 1)))]
   ""
   "@
    neg. %0,%1
@@ -2170,13 +2172,13 @@
 
 (define_split
   [(set (match_operand:CC 2 "cc_reg_not_cr0_operand" "")
-	(compare:CC (neg:P (match_operand:P 1 "gpc_reg_operand" ""))
+	(compare:CC (neg:P2 (match_operand:P2 1 "gpc_reg_operand" ""))
 		    (const_int 0)))
-   (set (match_operand:P 0 "gpc_reg_operand" "")
-	(neg:P (match_dup 1)))]
+   (set (match_operand:P2 0 "gpc_reg_operand" "")
+	(neg:P2 (match_dup 1)))]
   "reload_completed"
   [(set (match_dup 0)
-	(neg:P (match_dup 1)))
+	(neg:P2 (match_dup 1)))
    (set (match_dup 2)
 	(compare:CC (match_dup 0)
 		    (const_int 0)))]
@@ -14521,31 +14523,31 @@
   "")
 
 (define_insn_and_split "*gtu<mode>"
-  [(set (match_operand:P 0 "gpc_reg_operand" "=r")
-	(gtu:P (match_operand:P 1 "gpc_reg_operand" "r")
-	       (match_operand:P 2 "reg_or_short_operand" "rI")))]
+  [(set (match_operand:P2 0 "gpc_reg_operand" "=r")
+	(gtu:P2 (match_operand:P2 1 "gpc_reg_operand" "r")
+	        (match_operand:P2 2 "reg_or_short_operand" "rI")))]
   ""
   "#"
   ""
-  [(set (match_dup 0) (neg:P (gtu:P (match_dup 1) (match_dup 2))))
-   (set (match_dup 0) (neg:P (match_dup 0)))]
+  [(set (match_dup 0) (neg:P2 (gtu:P2 (match_dup 1) (match_dup 2))))
+   (set (match_dup 0) (neg:P2 (match_dup 0)))]
   "")
 
 (define_insn_and_split "*gtu<mode>_compare"
   [(set (match_operand:CC 3 "cc_reg_operand" "=x,?y")
 	(compare:CC
-	 (gtu:P (match_operand:P 1 "gpc_reg_operand" "r,r")
-		 (match_operand:P 2 "reg_or_short_operand" "rI,rI"))
+	 (gtu:P2 (match_operand:P2 1 "gpc_reg_operand" "r,r")
+		 (match_operand:P2 2 "reg_or_short_operand" "rI,rI"))
 	 (const_int 0)))
-   (set (match_operand:P 0 "gpc_reg_operand" "=r,r")
-	(gtu:P (match_dup 1) (match_dup 2)))]
+   (set (match_operand:P2 0 "gpc_reg_operand" "=r,r")
+	(gtu:P2 (match_dup 1) (match_dup 2)))]
   ""
   "#"
   ""
-  [(set (match_dup 0) (neg:P (gtu:P (match_dup 1) (match_dup 2))))
+  [(set (match_dup 0) (neg:P2 (gtu:P2 (match_dup 1) (match_dup 2))))
    (parallel [(set (match_dup 3)
-		   (compare:CC (neg:P (match_dup 0)) (const_int 0)))
-	      (set (match_dup 0) (neg:P (match_dup 0)))])]
+		   (compare:CC (neg:P2 (match_dup 0)) (const_int 0)))
+	      (set (match_dup 0) (neg:P2 (match_dup 0)))])]
   "")
 
 (define_insn_and_split "*plus_gtu<mode>"
@@ -14580,9 +14582,9 @@
   "")
 
 (define_insn "*neg_gtu<mode>"
-  [(set (match_operand:P 0 "gpc_reg_operand" "=r")
-	(neg:P (gtu:P (match_operand:P 1 "gpc_reg_operand" "r")
-		      (match_operand:P 2 "reg_or_short_operand" "rI"))))]
+  [(set (match_operand:P2 0 "gpc_reg_operand" "=r")
+	(neg:P2 (gtu:P2 (match_operand:P2 1 "gpc_reg_operand" "r")
+		      	(match_operand:P2 2 "reg_or_short_operand" "rI"))))]
   ""
   "subf%I2c %0,%1,%2\;subfe %0,%0,%0"
   [(set_attr "type" "two")
