apply gcc.load_on_store_bypass-48x
Problem Statement
 This patch implements option -fbypass-load-on-store

 A load on store collision causes the load to to be replayed if the store has not completed.
 Under -fbypass-load-on-store, GCC will attempt to avoid a load on store collision by trying
 to space the load away from the store by scheduling upto 14 instructions in between, to
 prevent the load from executing too early.

Owned by:
  Russo John

Action:

 * -fbypass-load-on-store is enabled under -fschedule-insns
 * Cores supported: e5500, e6500, e500mc
 * Ref: Load-on-Store Collision Avoidance by Software Stall of Load. James Yang. May 18, 2010

 Rev2:
 * Scheduler is switched off at -O0. Re-work the test case.

--- a/gcc/config/rs6000/e500mc.md
+++ b/gcc/config/rs6000/e500mc.md
@@ -198,3 +198,5 @@
   (and (eq_attr "type" "ddiv")
        (eq_attr "cpu" "ppce500mc"))
   "e500mc_decode,e500mc_issue+e500mc_fpu,e500mc_fpu*65")
+
+(define_bypass 15 "e500mc_store" "e500mc_load" "rs6000_bypass_load_on_store_collision_p")
